samples/_failures_safe/1761141439_37e329_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_051e1a69.c: In function ‘main’:
./samples/SAFE/__tmp_051e1a69.c:161: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_051e1a69.c:149:33: note: to match this ‘{’
  149 |     struct EventData events[] = {
      |                                 ^
./samples/SAFE/__tmp_051e1a69.c:160:9: error: expected declaration or statement at end of input
  160 |         {EVENT_START, "", 0}
      |         ^
